feat: v1.0.8+ Boot Infrastructure Excellence + Hardware-Specific Optimization + Comprehensive Memory Bank Synchronization
## Boot Infrastructure Excellence Implementation

### BootInfrastructureOptimizer Class (1,820+ Lines)
- Complete systematic implementation addressing 40+ boot failure scenarios
- Production-ready code with comprehensive error handling and logging systems
- Zero placeholder implementation - no stubs, TODOs, or future development placeholders

### System Group Management
- Complete SystemGroupManager for missing groups (audio, disk, kvm, video, render, input, utmp)
- Immutable system compatibility with comprehensive group management failures resolution
- Enhanced system reliability through proper group membership management

### PCI Resource Allocation Enhancement
- Enhanced pci=realloc to pci=realloc,assign-busses,nocrs for complex PCI configurations
- Hardware initialization optimization ensuring proper device detection
- Complex PCI configuration support for modern gaming hardware

### Hardware-Specific Boot Optimization
- RTX 5080 Blackwell architecture optimizations for gaming performance
- Intel I225-V network controller support for high-performance networking
- Gaming/high-performance environment compatibility enhancements

## Comprehensive System Restoration

### Undo Script Evolution v3.0.0
- OSTree-native integration with /usr/etc synchronization for immutable systems
- Complete evolution from v1.0 → v2.0.0 → v3.0.0 with enhanced capabilities
- Advanced backup architecture with SELinux/xattrs preservation

### Hardware Re-Detection Systems
- Complete udev management systems for comprehensive hardware detection
- Hardware re-detection capabilities ensuring proper device enumeration
- Device validation and hardware compatibility verification

### Deep Audio System Reset
- Safe module reloading methodology preventing system instability
- Comprehensive PipeWire/PulseAudio restoration with socket conflict resolution
- Audio system health rest

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -53,13 +53,10 @@ jobs:
       - name: Check if release should be created
         id: check-release
         run: |
-          # Check if tag already exists
-          if git rev-parse --verify "refs/tags/${{ steps.get-version.outputs.version_tag }}" >/dev/null 2>&1; then
-            echo "Tag ${{ steps.get-version.outputs.version_tag }} already exists, skipping release"
-            echo "should_release=false" >> $GITHUB_OUTPUT
-          else
-            echo "should_release=true" >> $GITHUB_OUTPUT
-          fi
+          # Always build releases when manually triggered or VERSION file changes
+          # Tags are created manually and we want to build even if tag exists
+          echo "Building release for version ${{ steps.get-version.outputs.version_tag }}"
+          echo "should_release=true" >> $GITHUB_OUTPUT
 
   build-executables:
     needs: detect-version
