--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,6 +19,11 @@ on:
         default: false
         type: boolean
 
+permissions:
+  contents: write
+  actions: read
+  id-token: write
+
 env:
   PYTHON_VERSION: '3.11'
   
@@ -164,6 +169,9 @@ jobs:
     needs: [detect-version, build-executables]
     if: needs.detect-version.outputs.should_release == 'true'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: read
     
     steps:
       - name: Checkout repository
